--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "main.js",
   "scripts": {
     "start": "npm i && live-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha *.test.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.1"
+    "live-server": "^1.2.1",
+    "mocha": "^8.4.0"
   },
   "dependencies": {}
 }
